# NPL

./: .gitignore  pyproject.toml  requirements.txt
NeuronPlotLib/: pyproject.toml  requirements.txt
NeuronPlotLib/demo/: usecase_StatsBarPlot.py
NeuronPlotLib/src/NeuronPlotLib/: __init__.py  __main__.py  _version.py
SigmaS/: pyproject.toml
SigmaS/dev/: compile.bat  ui2py.bat
SigmaS/src/SigmaS/: __main__.py  _version.py  build.py  mainwindow.py  mainwindow_layout.py  methods.py
Stata/: gui.py
src/NeuronPlotLib/: BarGraph.py  BoxWhiskersPlot.py  HistCumPlot.py  PCAPlot.py  StatsBarPlot.py  __main__.py
statlib/: pyproject.toml  readme.md  requirements.txt
statlib/demo/: usecase.py
statlib/gui/: compile.bat  main.py  mainwindow_layout.py  mainwindow_layout.ui
statlib/src/statlib/: __init__.py  __main__.py  _version.py  statlib.py
stats/: CsvParser.py  SimpleCsv.py  compile.bat  data.csv  gui.py  mainwindow.ui  pyproject.toml  readme.md  readme.txt  requirements.txt  stats.py  text.txt  ui2py.bat  usecase.py
stats/gui/: compile.bat  gui.py  mainwindow.py  mainwindow.ui  ui2py.bat
stats/src/stats/: PCAPlot.py  __init__.py  stats.py
