[build-system]
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta"

[project]
name = "NeuronPlotLib"
dynamic = ["version"]
license = {file = "LICENSE"}
authors = [
  { name="Stemonitis"},
  { name="konung-yaropolk", email="yaropolk1995@gmail.com" },
  { name="SciWare LLC"},
]
description = "NeuronPlotLib - scientific data visualization tool"
keywords = ["Science", "Statistics"]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy",
    "matplotlib", 
    "scipy",
    "openpyxl",
    "scsv>=0.1.5",
    "PyQt6",
]

[project.urls]
Homepage = "https://github.com/konung-yaropolk/NPL"
Issues = "https://github.com/konung-yaropolk/NPL/issues"

[tool.setuptools.dynamic]
version = {attr = "NeuronPlotLib.__version__"}
