[build-system]
requires = ["setuptools>=61.0", "scsv", "numpy", "scipy"]
build-backend = "setuptools.build_meta"

[project]
name = "statlib"
dynamic = ["version"]
license = {file = "LICENSE"}
authors = [
  { name="konung-yaropolk", email="yaropolk1995@gmail.com" },
  { name="SciWare LLC"},
]
description = "statlib - a simple statistical analysis tool"
keywords = ["Science", "Statistics"]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy",
    "scipy",
    "scsv>=0.1.4",
    "PyQt6",
]

[project.urls]
Homepage = "https://github.com/konung-yaropolk/NPL"
Issues = "https://github.com/konung-yaropolk/NPL/issues"

[tool.setuptools.dynamic]
version = {attr = "statlib.__version__"}
